--- a/index.html
+++ b/index.html
@@ -4,38 +4,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Квадратные Мандорины — Магазин</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
-  <style>
-    :root{
-      --bg:#f7fafb;
-      --card:#ffffff;
-      --accent:#ff7a59;
-      --muted:#6b7280;
-      --radius:16px;
-      --shadow: 0 6px 18px rgba(15,23,42,0.08);
-    }
-    *{box-sizing:border-box}
-    body{margin:0;font-family:Inter,system-ui;background:linear-gradient(180deg,var(--bg),#fff 60%);color:#0f172a;line-height:1.4}
-    header{display:flex;justify-content:space-between;align-items:center;padding:20px 32px;position:sticky;top:0;background:rgba(255,255,255,0.8);backdrop-filter:blur(8px);box-shadow:0 1px 0 rgba(0,0,0,0.05)}
-    .logo{display:flex;align-items:center;gap:12px;font-weight:800;font-size:18px;color:var(--accent)}
-    nav a{margin-left:18px;color:var(--muted);text-decoration:none;font-weight:600}
-    nav .cta{background:var(--accent);color:#fff;padding:8px 14px;border-radius:10px;text-decoration:none;font-weight:700;box-shadow:0 4px 12px rgba(255,122,89,.2)}
-    .container{max-width:1100px;margin:24px auto;padding:0 20px}
-    h2{margin-bottom:14px}
-    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px}
-    .product{background:var(--card);border-radius:14px;padding:14px;box-shadow:var(--shadow);display:flex;flex-direction:column;gap:10px}
-    .product img{width:100%;height:180px;object-fit:cover;border-radius:10px}
-    .price{font-weight:800;color:var(--accent)}
-    .btn{padding:10px 14px;border-radius:10px;border:none;cursor:pointer;font-weight:700}
-    .btn-primary{background:var(--accent);color:#fff}
-    .btn-primary:hover{background:#ff5722}
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <div class="logo">🍊 Квадратные Мандорины</div>
+    <div class="logo">Квадратные Мандорины</div>
     <nav>
-      <a href="cart.html" class="cta">Корзина (<span id="cartCount">0</span>)</a>
+      <a href="cart.html">Корзина (<span id="cartCount">0</span>)</a>
     </nav>
   </header>
 
@@ -43,38 +18,45 @@
     <h2>Популярные товары</h2>
     <div class="grid">
       <div class="product" data-name="Классическая квадратная" data-price="7.99">
-        <img src="images/product-1.jpg" alt="">
+        <img src="images/product-1.jpg" alt="Классическая квадратная">
         <h3>Классическая квадратная</h3>
         <div class="price">$7.99</div>
-        <button class="btn btn-primary" onclick="addToCart(this)">Добавить в корзину</button>
+        <button class="btn" onclick="addToCart(this)">Добавить в корзину</button>
       </div>
       <div class="product" data-name="Мандарин-Гурман" data-price="12.50">
-        <img src="images/product-2.jpg" alt="">
+        <img src="images/product-2.jpg" alt="Мандарин-Гурман">
         <h3>Мандарин-Гурман</h3>
         <div class="price">$12.50</div>
-        <button class="btn btn-primary" onclick="addToCart(this)">Добавить в корзину</button>
+        <button class="btn" onclick="addToCart(this)">Добавить в корзину</button>
       </div>
       <div class="product" data-name="Премиум-Эдишн" data-price="19.00">
-        <img src="images/product-3.jpg" alt="">
+        <img src="images/product-3.jpg" alt="Премиум-Эдишн">
         <h3>Премиум-Эдишн</h3>
         <div class="price">$19.00</div>
-        <button class="btn btn-primary" onclick="addToCart(this)">Добавить в корзину</button>
+        <button class="btn" onclick="addToCart(this)">Добавить в корзину</button>
       </div>
     </div>
   </main>
 
   <script>
-    function getCart(){ return JSON.parse(localStorage.getItem("cart")||"[]"); }
-    function saveCart(cart){ localStorage.setItem("cart",JSON.stringify(cart)); }
-    function updateCartCount(){ document.getElementById("cartCount").innerText=getCart().length; }
+    function getCart(){
+      return JSON.parse(localStorage.getItem("cart")||"[]");
+    }
+    function saveCart(cart){
+      localStorage.setItem("cart",JSON.stringify(cart));
+    }
+    function updateCartCount(){
+      document.getElementById("cartCount").innerText = getCart().length;
+    }
     function addToCart(btn){
-      const product=btn.closest(".product");
-      const name=product.dataset.name;
-      const price=product.dataset.price;
-      let cart=getCart();
+      const productEl = btn.closest(".product");
+      const name = productEl.dataset.name;
+      const price = productEl.dataset.price;
+      let cart = getCart();
       cart.push({name,price});
       saveCart(cart);
       updateCartCount();
+      alert(name+" добавлен в корзину!");
     }
     updateCartCount();
   </script>
