--- a/index.html
+++ b/index.html
@@ -23,16 +23,39 @@
         <div class="price">$7.99</div>
         <button class="btn" onclick="addToCart(this)">Добавить в корзину</button>
       </div>
+
       <div class="product" data-name="Мандарин-Гурман" data-price="12.50">
         <img src="images/product-2.jpg" alt="Мандарин-Гурман">
         <h3>Мандарин-Гурман</h3>
         <div class="price">$12.50</div>
         <button class="btn" onclick="addToCart(this)">Добавить в корзину</button>
       </div>
+
       <div class="product" data-name="Премиум-Эдишн" data-price="19.00">
         <img src="images/product-3.jpg" alt="Премиум-Эдишн">
         <h3>Премиум-Эдишн</h3>
         <div class="price">$19.00</div>
+        <button class="btn" onclick="addToCart(this)">Добавить в корзину</button>
+      </div>
+
+      <div class="product" data-name="Мини-Мандарин" data-price="4.99">
+        <img src="images/product-4.jpg" alt="Мини-Мандарин">
+        <h3>Мини-Мандарин</h3>
+        <div class="price">$4.99</div>
+        <button class="btn" onclick="addToCart(this)">Добавить в корзину</button>
+      </div>
+
+      <div class="product" data-name="Королевский квадрат" data-price="25.00">
+        <img src="images/product-5.jpg" alt="Королевский квадрат">
+        <h3>Королевский квадрат</h3>
+        <div class="price">$25.00</div>
+        <button class="btn" onclick="addToCart(this)">Добавить в корзину</button>
+      </div>
+
+      <div class="product" data-name="Сочный микс" data-price="15.00">
+        <img src="images/product-6.jpg" alt="Сочный микс">
+        <h3>Сочный микс</h3>
+        <div class="price">$15.00</div>
         <button class="btn" onclick="addToCart(this)">Добавить в корзину</button>
       </div>
     </div>
@@ -56,7 +79,6 @@
       cart.push({name,price});
       saveCart(cart);
       updateCartCount();
-      alert(name+" добавлен в корзину!");
     }
     updateCartCount();
   </script>
