--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Квадратные Мандорины — Магазин</title>
+  <title>Квадратные Мандорины - Магазин</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -79,7 +79,7 @@
     <div class="product" data-name="Королевский квадрат" data-price="25.00">
       <img src="images/product-5.jpg" alt="Королевский квадрат">
       <h3>Королевский квадрат</h3>
-      <p>Для настоящих гурманов — премиум качество</p>
+      <p>Для настоящих гурманов - премиум качество</p>
       <div class="price">$25.00</div>
       <button class="btn" onclick="addToCart(this)">Добавить в корзину</button>
     </div>
