--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <h2 id="products">Наши товары</h2>
   <div class="grid">
     <div class="product" data-name="Классическая квадратная" data-price="7.99">
-      <img src="images/product-1.jpg" alt="Классическая квадратная">
+      <img src="1мандарин.png" alt="Классическая квадратная">
       <h3>Классическая квадратная</h3>
       <p>500 г — аккуратные кубики вкуса</p>
       <div class="price">$7.99</div>
