--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <h2 id="products">Наши товары</h2>
   <div class="grid">
     <div class="product" data-name="Классическая квадратная" data-price="7.99">
-      <img src="1мандарин.png" alt="Классическая квадратная">
+      <img src="Screenshot 2025-10-02 135629.png" alt="Классическая квадратная">
       <h3>Классическая квадратная</h3>
       <p>500 г — аккуратные кубики вкуса</p>
       <div class="price">$7.99</div>
@@ -53,7 +53,7 @@
     </div>
 
     <div class="product" data-name="Мандарин-Гурман" data-price="12.50">
-      <img src="images/product-2.jpg" alt="Мандарин-Гурман">
+      <img src="Screenshot 2025-10-02 135629.png" alt="Мандарин-Гурман">
       <h3>Мандарин-Гурман</h3>
       <p>Насыщенный аромат, мягкая мякоть</p>
       <div class="price">$12.50</div>
@@ -61,7 +61,7 @@
     </div>
 
     <div class="product" data-name="Премиум-Эдишн" data-price="19.00">
-      <img src="images/product-3.jpg" alt="Премиум-Эдишн">
+      <img src="Screenshot 2025-10-02 135629.png" alt="Премиум-Эдишн">
       <h3>Премиум-Эдишн</h3>
       <p>Упаковка вручную, идеальные грани</p>
       <div class="price">$19.00</div>
@@ -69,7 +69,7 @@
     </div>
 
     <div class="product" data-name="Мини-Мандарин" data-price="4.99">
-      <img src="images/product-4.jpg" alt="Мини-Мандарин">
+      <img src="Screenshot 2025-10-02 135629.png" alt="Мини-Мандарин">
       <h3>Мини-Мандарин</h3>
       <p>Компактный, сладкий и удобный для перекуса</p>
       <div class="price">$4.99</div>
@@ -77,7 +77,7 @@
     </div>
 
     <div class="product" data-name="Королевский квадрат" data-price="25.00">
-      <img src="images/product-5.jpg" alt="Королевский квадрат">
+      <img src="Screenshot 2025-10-02 135629.png" alt="Королевский квадрат">
       <h3>Королевский квадрат</h3>
       <p>Для настоящих гурманов - премиум качество</p>
       <div class="price">$25.00</div>
@@ -85,7 +85,7 @@
     </div>
 
     <div class="product" data-name="Сочный микс" data-price="15.00">
-      <img src="images/product-6.jpg" alt="Сочный микс">
+      <img src="Screenshot 2025-10-02 135629.png" alt="Сочный микс">
       <h3>Сочный микс</h3>
       <p>Ассорти из разных сортов квадратных мандаринов</p>
       <div class="price">$120.00</div>
@@ -93,7 +93,7 @@
     </div>
 
     <div class="product" data-name="Экзотический набор" data-price="22.50">
-      <img src="images/product-7.jpg" alt="Экзотический набор">
+      <img src="Screenshot 2025-10-02 135629.png" alt="Экзотический набор">
       <h3>Экзотический набор</h3>
       <p>Набор редких сортов мандаринов для экспертов</p>
       <div class="price">$22.50</div>
@@ -101,7 +101,7 @@
     </div>
 
     <div class="product" data-name="Мандариновый деликатес" data-price="18.00">
-      <img src="images/product-8.jpg" alt="Мандариновый деликатес">
+      <img src="Screenshot 2025-10-02 135629.png" alt="Мандариновый деликатес">
       <h3>Мандариновый деликатес</h3>
       <p>Идеальный вариант для подарка или особого события</p>
       <div class="price">$18.00</div>
